Apply common description changes