@@ -12,9 +12,9 @@ import static ai.greycos.solver.core.impl.bavet.common.joiner.JoinerType.LESS_TH
 import static ai.greycos.solver.core.impl.bavet.common.joiner.JoinerType.LESS_THAN_OR_EQUAL;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -58,35 +58,32 @@ class JoinerTypeTest {
 
   @Test
   void contain() {
-    Collection<Integer> collection = Arrays.asList(1);
-    assertThat(CONTAINING.matches(collection, 1)).isTrue();
-    assertThat(CONTAINING.matches(collection, 2)).isFalse();
+    assertThat(CONTAINING.matches(List.of(1, 3), 1)).isTrue();
+    assertThat(CONTAINING.matches(List.of(1, 3), 2)).isFalse();
   }
 
   @Test
   void containedIn() {
-    assertThat(CONTAINED_IN.matches(1, Arrays.asList(1, 3))).isTrue();
-    assertThat(CONTAINED_IN.matches(2, Arrays.asList(1, 3))).isFalse();
+    assertThat(CONTAINED_IN.matches(1, List.of(1, 3))).isTrue();
+    assertThat(CONTAINED_IN.matches(2, List.of(1, 3))).isFalse();
   }
 
   @Test
   void containsAny() {
-    assertThat(CONTAINING_ANY_OF.matches(Arrays.asList(1, 2, 3), Arrays.asList(2))).isTrue();
-    assertThat(CONTAINING_ANY_OF.matches(Arrays.asList(1, 2, 3), Arrays.asList(6))).isFalse();
-    assertThat(CONTAINING_ANY_OF.matches(Arrays.asList(1, 2, 3), Arrays.asList(3, 4, 5))).isTrue();
-    assertThat(CONTAINING_ANY_OF.matches(Arrays.asList(3, 4, 5), Arrays.asList(1, 2, 3))).isTrue();
-    assertThat(CONTAINING_ANY_OF.matches(Arrays.asList(1, 2, 3), Arrays.asList(4, 5, 6))).isFalse();
-    assertThat(CONTAINING_ANY_OF.matches(Arrays.asList(1, 2, 3), Collections.emptyList()))
-        .isFalse();
-    assertThat(CONTAINING_ANY_OF.matches(Collections.emptyList(), Arrays.asList(1))).isFalse();
-    assertThat(CONTAINING_ANY_OF.matches(Collections.emptyList(), Collections.emptyList()))
-        .isFalse();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(2))).isTrue();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(6))).isFalse();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(3, 4, 5))).isTrue();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(3, 4, 5), List.of(1, 2, 3))).isTrue();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(4, 5, 6))).isFalse();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of())).isFalse();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(), List.of(1))).isFalse();
+    assertThat(CONTAINING_ANY_OF.matches(List.of(), List.of())).isFalse();
   }
 
   @Test
   void intersecting() {
-    Collection<Integer> left = Arrays.asList(1, 2, 3);
-    Collection<Integer> right = Arrays.asList(3, 4, 5);
+    Collection<Integer> left = List.of(1, 2, 3);
+    Collection<Integer> right = List.of(3, 4, 5);
     assertThat(INTERSECTING.matches(left, right)).isTrue();
     assertThat(INTERSECTING.matches(right, left)).isTrue();
     assertThat(INTERSECTING.matches(left, Collections.emptySet())).isFalse();
@@ -94,11 +91,11 @@ class JoinerTypeTest {
 
   @Test
   void disjoint() {
-    Collection<Integer> first = Arrays.asList(1, 2, 3);
-    Collection<Integer> second = Arrays.asList(3, 4, 5);
+    Collection<Integer> first = List.of(1, 2, 3);
+    Collection<Integer> second = List.of(3, 4, 5);
     assertThat(DISJOINT.matches(first, second)).isFalse();
     assertThat(DISJOINT.matches(second, first)).isFalse();
-    Collection<Integer> third = Arrays.asList(4, 5);
+    Collection<Integer> third = List.of(4, 5);
     assertThat(DISJOINT.matches(first, third)).isTrue();
     assertThat(DISJOINT.matches(third, first)).isTrue();
     // empty sets are disjoint
